--- a/Week-2/styles.css
+++ b/Week-2/styles.css
@@ -1,9 +1,12 @@
 body {
   font-family: "Roboto Condensed", sans-serif;
+  overflow-y: hidden;
+  background-color: #e6ffff;
 }
 header {
   text-align: center;
 }
+
 .box {
   display: flex;
   gap: 15px;
@@ -17,15 +20,26 @@ header {
 
 .one {
   flex: 1;
-  /* background-color: aqua; */
 }
 
 .two {
   flex: 1;
-  /* background-color: burlywood; */
 }
 
 .three {
   flex: 1;
   background-color: chartreuse;
+}
+footer {
+  text-align: center;
+  height: auto;
+  font-family: "Koulen", cursive;
+  background-image: url("https://ngs-it.com/files/course/Backgrounds_in_CSS.jpg");
+}
+input[type="text"],
+input[type="tel"],
+input[type="email"],
+select {
+  height: 20px;
+  width: 120px;
 }
